--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,14 @@ platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 board_build.partitions = min_spiffs.csv
+
+lib_deps =
+    h2zero/NimBLE-Arduino@^2.0.0
+
+; Testing
+build_flags =
+    -DCONFIG_BT_NIMBLE_MAX_CONNECTIONS=4
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+
+monitor_speed = 115200
