--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,6 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
 
 monitor_speed = 115200
+
+build_type = debug
+monitor_filters = esp32_exception_decoder
