Connectivity - start as client, become server if no server in range

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,9 @@ lib_deps =
 ; Testing
 build_flags =
     -DCONFIG_BT_NIMBLE_MAX_CONNECTIONS=4
-;    -DARDUINO_USB_MODE=1
-;    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DCORE_DEBUG_LEVEL=5
+    -DARDUHAL_LOG_LEVEL=5
 
 monitor_speed = 115200
