BLELN Authentication developement started

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,9 @@ build_flags =
 #    -DARDUINO_USB_CDC_ON_BOOT=1
     -DCORE_DEBUG_LEVEL=0
 
+#extra_scripts =
+#    pre:tools/nvs_gen.py
+#    post:tools/nvs_flash.py
+
 
 monitor_speed = 115200
