--- a/tools/config.ini
+++ b/tools/config.ini
@@ -1,5 +1,5 @@
 [nvs]
-tool_path = ~/.platformio/packages/framework-espidf/components/nvs_flash/nvs_partition_generator/nvs_partition_gen.py
+tool_path = /home/dkulpa/.platformio/packages/framework-espidf/components/nvs_flash/nvs_partition_generator/nvs_partition_gen.py
 partition_size = 0x5000
 
 [flash]
